--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^1.1.6
   google_fonts: ^6.1.0
+  majesticons_flutter: ^0.0.1
 
 dev_dependencies:
   flutter_test:
@@ -18,3 +20,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets: 
+    -  assets/icons/
+
+
