--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: '>=3.2.0-15.0.dev <4.0.0'
 
 dependencies:
+  email_validator: ^2.1.17
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.6
   google_fonts: ^6.1.0
+  iconify_flutter: ^0.0.5
   majesticons_flutter: ^0.0.1
 
 dev_dependencies:
