adding home screen and home screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   email_validator: ^2.1.17
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.3
   flutter_svg: ^1.1.6
   google_fonts: ^6.1.0
+  http: ^1.1.0
   iconify_flutter: ^0.0.5
   majesticons_flutter: ^0.0.1
+  overlapping_panels: ^0.0.3
 
 dev_dependencies:
   flutter_test:
