--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.4.3
   flutter_svg: ^1.1.6
+  flutter_webrtc: ^0.9.45
   google_fonts: ^6.1.0
   http: ^1.1.0
   iconify_flutter: ^0.0.5
