--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   iconify_flutter: ^0.0.5
   majesticons_flutter: ^0.0.1
   overlapping_panels: ^0.0.3
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
