--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,13 @@ dependencies:
   flutter_riverpod: ^2.4.3
   flutter_svg: ^1.1.6
   flutter_webrtc: ^0.9.45
+  fluttertoast: ^8.2.2
   google_fonts: ^6.1.0
   http: ^1.1.0
   iconify_flutter: ^0.0.5
   majesticons_flutter: ^0.0.1
   overlapping_panels: ^0.0.3
+  shared_preferences: ^2.2.2
   socket_io_client: ^2.0.3+1
 
 dev_dependencies:
